[tool.poetry]
name = "everything-in-markdown"
version = "0.1.0"
description = ""
authors = ["Antonin <antoninlefevre45@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
markitdown = "^0.0.1a2"
streamlit = "^1.41.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
